--- a/samples/RotatingCube/RotatingCube_phone.vcxproj.filters
+++ b/samples/RotatingCube/RotatingCube_phone.vcxproj.filters
@@ -7,17 +7,38 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BasicTimer.h" />
-    <ClInclude Include="RotatingCube.h" />
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="CubeRenderer.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="RotatingCube.cpp" />
-    <ClCompile Include="pch.cpp" />
-    <ClCompile Include="CubeRenderer.cpp" />
+    <Image Include="Assets\ApplicationIcon.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="Assets\AlignmentGrid.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="Assets\Tiles\FlipCycleTileLarge.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="Assets\Tiles\FlipCycleTileMedium.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="Assets\Tiles\FlipCycleTileSmall.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="Assets\Tiles\IconicTileMediumLarge.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="Assets\Tiles\IconicTileSmall.png">
+      <Filter>Assets</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="WMAppManifest.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BasicTimer.h" />
+    <ClInclude Include="CubeRenderer.h" />
+    <ClInclude Include="RotatingCube.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="CubeRenderer.cpp" />
+    <ClCompile Include="RotatingCube.cpp" />
   </ItemGroup>
 </Project>
