--- a/src/compiler/preprocessor/preprocessor_winrt.vcxproj
+++ b/src/compiler/preprocessor/preprocessor_winrt.vcxproj
@@ -94,31 +94,37 @@
     <GenerateManifest>false</GenerateManifest>
     <TargetName>preprocessor</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>preprocessor</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>preprocessor</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>preprocessor</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>preprocessor</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>preprocessor</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
