--- a/src/compiler/translator_hlsl_winrt.vcxproj
+++ b/src/compiler/translator_hlsl_winrt.vcxproj
@@ -92,37 +92,37 @@
   <PropertyGroup />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <GenerateManifest>false</GenerateManifest>
-    <IntDir>$(Configuration)\hlsl\</IntDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_hlsl</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <GenerateManifest>false</GenerateManifest>
-    <IntDir>$(Configuration)\hlsl\</IntDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_hlsl</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <GenerateManifest>false</GenerateManifest>
-    <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_hlsl</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <GenerateManifest>false</GenerateManifest>
-    <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_hlsl</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <GenerateManifest>false</GenerateManifest>
-    <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_hlsl</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <GenerateManifest>false</GenerateManifest>
-    <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
+    <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_hlsl</TargetName>
     <OutDir>$(SolutionDir)WinRT\libs\vs2012\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
