--- a/src/glslPrecompiler/glslPrecompiler.vcxproj
+++ b/src/glslPrecompiler/glslPrecompiler.vcxproj
@@ -55,6 +55,9 @@
       <AdditionalDependencies>d3dcompiler.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ProjectReference />
+    <PostBuildEvent>
+      <Command>xcopy "$(ProjectDir)..\..\samples\d3dcompiler\Win32\D3Dcompiler_46.dll" $(TargetDir) /s /y /i /q &amp; echo Copied D3Dcompiler_46.dll</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -75,6 +78,9 @@
       </IgnoreSpecificDefaultLibraries>
       <AdditionalDependencies>d3dcompiler.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy "$(ProjectDir)..\..\samples\d3dcompiler\Win32\D3Dcompiler_46.dll" $(TargetDir) /s /y /i /q &amp; echo Copied D3Dcompiler_46.dll</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
